--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <a href="index.html">Home</a>
+        <a href="index2.html">Contacts</a>
+    </div>
+    <br>
+        <a href="https://www.campsaver.com/mens-clothing.html" target="_blank"><img style="width: 700;" src="https://d39wgzc5b4nd1t.cloudfront.net/images/posts/64be9a08bc2e3508862666.jpg"></a>
+     <h1>My name is Dmitrii</h1>
+    <p>I am the Creator of this site</p>
+    <p>This is My <a href="moskalchuk.077@gmail.com" </a> Mail</p>
     
 </body>
 </html>
